# qa-guru-python-20

./: pyproject.toml
qa_guru_python_20/models/page/: adding_items_to_cart.py  authorization_pages.py
tests/: conftest.py  test_demoshop.py
